--- a/src/components/Home/Category/Category.scss
+++ b/src/components/Home/Category/Category.scss
@@ -1,4 +1,4 @@
-@import "../../css-config/mixins.scss";
+@import "../../../css-config/mixins.scss";
 .shop-by-category{
     max-width: 25px 0;
     @include md{
